<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    
    <item
        android:id="@+id/add_task"
        android:icon="@drawable/add_to_list_inverted"
        android:orderInCategory="2"
        android:showAsAction="ifRoom"
        android:title="@string/AddTask" android:enabled="true"/>

    <item
        android:id="@+id/show_list"
        android:icon="@drawable/list_inverted"
        android:orderInCategory="1"
        android:showAsAction="ifRoom"
        android:title="@string/showList" android:enabled="true"/>
    
    <item
        android:id="@+id/save_list"
        android:icon="@drawable/save_gray_labled"
        android:orderInCategory="5"
        android:showAsAction="ifRoom"
        android:title="@string/save" android:enabled="true"/>
    
        <item
        android:id="@+id/load_list"
        android:icon="@drawable/load_gray_labled"
        android:orderInCategory="4"
        android:showAsAction="ifRoom"
        android:title="@string/loadList" android:enabled="true"/>
   
        <item
        android:id="@+id/delete_list"
        android:icon="@drawable/list_x"
        android:orderInCategory="3"
        android:showAsAction="ifRoom"
        android:title="@string/deleteList" android:enabled="true"/>

</menu>